# Comparison

./: CMakeLists.txt  ProtocolParty.cpp  ProtocolParty.h  SmallFields.cpp  SmallFields.h  main.cpp  run_protocol.sh
MATRIX/: run.sh
